# gts

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/client-inventory/: SKILL.md
.claude/skills/graph-permissions/: SKILL.md
.claude/skills/graph-permissions/scripts/: check_drift.py  lookup_permissions.py
.github/workflows/: ci.yml  release.yml
docs/plans/: PLAN-v1.md  PLAN-v2.md
resources/: enum_command_permissions.json  foci_min_set.json  graph_endpoint_permissions.json
resources/entrascopes/: README.md
scripts/: analyze_foci_min_set.py  build_clients.py  build_permission_resources.py  permission_overrides.py
src/gts/: __init__.py  auth.py  cache.py  cli.py  config.py  constants.py  graph.py  jwt_utils.py  menu.py  progress.py  state.py
src/gts/enum/: __init__.py  operations.py  scopes.py
src/gts/storage/: __init__.py  base.py  keyring_backend.py  onepassword_backend.py
tests/: test_gts.py
