[project]
# PyPI distribution name (the import package and `gts` command are unchanged -- see
# [tool.uv.build-backend] module-name below). "gts" itself is already taken on PyPI.
name = "graph-token-store"
version = "0.1.1"
description = "A cli for managing Graph API tokens"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "petergs" }
]
requires-python = ">=3.12"
keywords = ["azure", "entra", "microsoft-graph", "oauth", "foci", "tokens", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "keyring>=25",
    "pyjwt>=2.8",
    "requests>=2.31",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/petergs/gts"
Repository = "https://github.com/petergs/gts"
Issues = "https://github.com/petergs/gts/issues"

[project.scripts]
gts = "gts.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gts"

[dependency-groups]
dev = [
    "pytest>=8",
    "pyright>=1.1.400",
    "ruff>=0.11.7",
]
